css/home.sass
---
#
---

@import brand

body
  background-image: url(/assets/city.jpg)
  background-repeat: no-repeat
  background-position: center bottom
  background-size: cover
  background-attachment: fixed
  background-color: white

  height: 100% !important
  max-height: 100% !important
  top: 0

  size: 100% !important
  width: 100% !important
  padding: 0
  margin: 0
  padding-bottom: 20px

.container
  margin: auto
  width: 500px!important

  // vertically align element
  top: 55%
  left: 50%
  position: absolute
  transform: translate(-50%, -50%)

  @media screen and (max-width: $phone)
    width: 85%!important
    top: 0!important
    left: 0
    position: relative
    transform: translate(0%, 175px)

  h1
    font-size: 30px
    color: white
    font-weight: 700
    font-family: $sans
    display: block
    text-align: center
    line-height: 150%
    text-shadow: 0 0 20px black

  hr
    border-top: 0
    border-bottom: 5px solid #eee
    width: 60px
    margin-top: 40px


  p
    font-size: 15px
    font-weight: 500
    color: #555
    font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif
    display: block
    color: #666
    text-align: center
    line-height: 160%

div.blog-index
  margin-top: 50px
  border-radius: 4px
  overflow: hidden!important

  text-align: center

  transform: translateX(2px)

  -webkit-transition: ease-in-out 0.3s
  transition: ease-in-out 0.3s

  background-color: rgba(255,255,255,0.7)
  $filter: blur(10px) saturate(250%)
  backdrop-filter: $filter
  -webkit-backdrop-filter: $filter

  .latest
    background-color: white
    font-family: $sans
    text-transform: uppercase
    font-size: 10.5px
    letter-spacing: 1.5px
    font-weight: 700
    color: $lightgrey

    text-align: center
    top: 0
    margin: auto
    width: 100%
    height: 37px
    line-height: 37px

  .index-content
    padding: 5px 30px 10px 30px


    h4
      font-size: 18px
      font-weight: 700
      font-family: $sans

      a
        color: $midgrey

    div.entry-content
      font-size: 15px
      color: $midgrey
      font-family: $serif
      word-wrap: break-word
      font-weight: normal
      line-height: 160%

      p.continueread
        font-family: $sans
        text-transform: uppercase
        font-size: 9.5px
        font-weight: 600
        letter-spacing: 0.5px

a
  text-decoration: none
  color: $link
  -webkit-transition: ease-in-out 0.3s
  transition: ease-in-out 0.3s

  &:hover
    text-decoration: none
    color: $linkhover

div.home-gap
  font-size: 20px
  opacity: 0

img
  max-width: 100%

